Lasso keymap not working in UV editor #41415

Closed
opened 2014-08-12 10:09:33 +02:00 by dru banerjee · 7 comments

Win 8.1 AMD64 Radeon

Any version Blender

In 3d view changing the default behavior to the one shown in the image works perfectly, each gesture with the lasso selects a new set of elements and deselects the previous selection unless shift key is down.

But in the UV editor the similar keymap is simply ignored, i.e. the lasso gesture always extends the selection.

Capture.PNG

Capture2.PNG

from an export of the map:

kmi = km.keymap_items.new('view3d.select_lasso', 'EVT_TWEAK_A', 'ANY')
kmi_props_setattr(kmi.properties, 'deselect', False)
kmi_props_setattr(kmi.properties, 'extend', False)
kmi = km.keymap_items.new('view3d.select_lasso', 'EVT_TWEAK_A', 'ANY', shift=True)
kmi_props_setattr(kmi.properties, 'deselect', False)
kmi_props_setattr(kmi.properties, 'extend', True)
kmi = km.keymap_items.new('view3d.select_lasso', 'EVT_TWEAK_L', 'ANY', alt=True)
kmi_props_setattr(kmi.properties, 'deselect', True)
kmi_props_setattr(kmi.properties, 'extend', False)
...
...
...
kmi = km.keymap_items.new('uv.select_lasso', 'EVT_TWEAK_A', 'ANY')
kmi_props_setattr(kmi.properties, 'extend', False)
kmi = km.keymap_items.new('uv.select_lasso', 'EVT_TWEAK_A', 'ANY', alt=True)
kmi_props_setattr(kmi.properties, 'deselect', True)
kmi_props_setattr(kmi.properties, 'extend', False)
kmi = km.keymap_items.new('uv.select_lasso', 'EVT_TWEAK_A', 'ANY', shift=True)
kmi_props_setattr(kmi.properties, 'extend', True)

is this expected? Fixable?

Win 8.1 AMD64 Radeon Any version Blender In 3d view changing the default behavior to the one shown in the image works perfectly, each gesture with the lasso selects a new set of elements and deselects the previous selection unless shift key is down. But in the UV editor the similar keymap is simply ignored, i.e. the lasso gesture always extends the selection. ![Capture.PNG](https://archive.blender.org/developer/F102583/Capture.PNG) ![Capture2.PNG](https://archive.blender.org/developer/F102584/Capture2.PNG) from an export of the map: ``` kmi = km.keymap_items.new('view3d.select_lasso', 'EVT_TWEAK_A', 'ANY') kmi_props_setattr(kmi.properties, 'deselect', False) kmi_props_setattr(kmi.properties, 'extend', False) kmi = km.keymap_items.new('view3d.select_lasso', 'EVT_TWEAK_A', 'ANY', shift=True) kmi_props_setattr(kmi.properties, 'deselect', False) kmi_props_setattr(kmi.properties, 'extend', True) kmi = km.keymap_items.new('view3d.select_lasso', 'EVT_TWEAK_L', 'ANY', alt=True) kmi_props_setattr(kmi.properties, 'deselect', True) kmi_props_setattr(kmi.properties, 'extend', False) ... ... ... kmi = km.keymap_items.new('uv.select_lasso', 'EVT_TWEAK_A', 'ANY') kmi_props_setattr(kmi.properties, 'extend', False) kmi = km.keymap_items.new('uv.select_lasso', 'EVT_TWEAK_A', 'ANY', alt=True) kmi_props_setattr(kmi.properties, 'deselect', True) kmi_props_setattr(kmi.properties, 'extend', False) kmi = km.keymap_items.new('uv.select_lasso', 'EVT_TWEAK_A', 'ANY', shift=True) kmi_props_setattr(kmi.properties, 'extend', True) ``` is this expected? Fixable?
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Druban

Added subscriber: @Druban
Bastien Montagne self-assigned this 2014-08-12 20:05:39 +02:00

Extend is not implemented for lasso UV selection, in fact… :/

Extend is not implemented for lasso UV selection, in fact… :/

This issue was referenced by 4bd252d8c3

This issue was referenced by 4bd252d8c3924361782998760523e25452594d21

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4bd252d8c3.

Closed by commit 4bd252d8c3.
Author

Thanks Bastien!

Thanks Bastien!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41415
No description provided.