Fix T41415: Lasso keymap not working in UV editor.

Extend option was not implemented for UV lasso select...